Add postbuild script to move /build to /docs so content can be served my Github Pages
A simple `mv` was not possible due to limitation of WSL

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "rm -rf docs && cp -r build docs && rm -rf build",
     "test": "react-scripts test"
   },
   "eslintConfig": {
