--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
     "fibers": "^4.0.2",
+    "redux-mock-store": "^1.5.4",
     "sass": "^1.26.3"
   }
 }
